--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "test_webview_demo.example.com.myapplication"
+        applicationId "com.example.com.myapplication"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
