--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
             android:name=".Example2Activity"
             android:label="@string/title_activity_example2" />
         <activity android:name=".DemoFragmentActivity" />
-
+        <activity
+            android:name=".Example3Activity"
+            android:label="@string/title_activity_example2" />
         <uses-permission android:name="android.permission.INTERNET" />
 
     </application>
