--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile project(':loadviewhelper')
+     compile project(':loadviewhelper')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
+   // compile 'com.ycjiang:loadviewhelper:1.1.1'
 }
