--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.com.myapplication">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -29,8 +31,7 @@
         <activity
             android:name=".Example3Activity"
             android:label="@string/title_activity_example2" />
-
-
+        <activity android:name=".Main3Activity"></activity>
     </application>
 
 </manifest>
