--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,15 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'com.novoda:bintray-release:0.6.1'
+        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.novoda:bintray-release:0.8.0'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
     }
     tasks.withType(Javadoc) {
         options {
